--- a/src/Components/Pages/EditCourse/CourseDetail.css
+++ b/src/Components/Pages/EditCourse/CourseDetail.css
@@ -8,7 +8,7 @@
   position: absolute;
   left: 20%;
   top: 12%;
-  height: 100vh;
+  height: auto;
 }
 
 /* Left Section */
@@ -18,6 +18,8 @@
   border-radius: 16px;
   background-color: #1f1f1f;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  height: auto;
+
 }
 
 .course-detail-container .left-section .course-title {
@@ -47,12 +49,11 @@
   flex: 1.2;
   padding: 20px;
   border-radius: 16px;
-  background-color: #252525;
+  background-color: #1f1f1f;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   gap: 20px;
+  height: auto;
+  
 }
 
 .course-detail-container .right-section .banner-img {
@@ -61,6 +62,7 @@
   border-radius: 12px;
   object-fit: cover;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  margin-bottom: 15px;
 }
 
 .course-detail-container .right-section .likes {
@@ -82,6 +84,7 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
+  height: auto;
 }
 
 .course-detail-container .right-section .option {
