--- a/src/Components/Pages/EditCourse/EditCourse.css
+++ b/src/Components/Pages/EditCourse/EditCourse.css
@@ -14,6 +14,12 @@
     border-radius: 15px;
        
 }
+.course-edit-wrapper .course-edit:hover {
+  transform: scale(1.03);
+  box-shadow: 0 10px 20px rgba(255, 255, 255, 0.1);
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+}
 
  .course-edit-wrapper .course-edit .course-img-wrapper{
     width: 300px;
@@ -33,6 +39,14 @@
     font-size: 18px;
     padding: 10px;
     color: #ffffffc8;
+    margin: 10px 0 0 0;
+
+}
+
+.course-edit-wrapper  .course-edit .course-info-edit .edit-duration{
+    font-size: 18px;
+    padding: 10px;
+    color: #ffffffc8;
     margin: 0;
 
 }
@@ -46,6 +60,13 @@
     font-size: 22px;
     padding: 10px;
     color: #ffffff;
+    margin: 0;
+
+}
+   .course-edit-wrapper .course-edit .course-info-edit .edit-discount-card{
+    font-size: 20px;
+    padding: 10px;
+    color: #ffffff7f;
     margin: 0;
 
 }
